--- a/framework/test.html
+++ b/framework/test.html
@@ -12,12 +12,11 @@
   <div style="row">
   <div style="text-align: left;" class="col-12">
     <h1>Marco Jovovich</h1>
-    <h3>Front-end Ninja</a></li>
-   <!-- <ul>
-    <h3><li><a href="default.asp">Front-end Ninja</a></li>
+   <ul>
+    <h3 id="navbar"><li><a href="default.asp">Front-end Ninja</a></li>
         <li><a href="news.asp">Contact</a></li>
         <li><a href="about.asp">About</a></li></h3>
-    </ul> -->
+    </ul>
   </div>
 
     <div class="row">
@@ -37,13 +36,14 @@
         <p><a href="http://github.com">Link to project</a></p>
       </div>
       <div class="col-4">
-        <img src="images/dogpic4.jpg">
+       <!--  <img src="images/dogpic4.jpg"> -->
+       <img src="images/dogpic4.jpg">
         <h3>DogSpace</h3>
         <p><a href="http://github.com">Link to project</a></p>
       </div>
       <div class="col-4">
-        <img src="images/hell.jpg">
-        <h3>The Internet</h3>
+        <img src="http://lorempixel.com/300/200">
+        <h3>Paradigm</h3>
         <p><a href="http://github.com">Link to project</a></p>
 
 
